--- a/index.html
+++ b/index.html
@@ -3,20 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta property="og:title" content="VibeGoblin: Daily Mystical Vibes" />
-  <meta property="og:description" content="Tap to reveal your mystical goblin vibe 🧙‍♂️✨" />
-  <meta property="og:image" content="https://example.com/vibegoblin-icon.png" />
   <title>VibeGoblin</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="container">
-    <h1>🧙‍♂️ VibeGoblin</h1>
-    <p>Your daily mystical goblin vibe:</p>
-    <div id="vibeBox">🎲 Tap the button!</div>
-    <button onclick="revealVibe()">Spin My Vibe</button>
-    <p id="shareHint">→ Post it on Warpcast!</p>
-  </div>
+  <h1>🧙‍♂️ VibeGoblin</h1>
+  <p>Welcome, mortal. Tap below to summon today's vibe. 🌌</p>
+  <button onclick="showVibe()">Summon Vibe</button>
+  <p id="vibe-output" class="vibe-box"></p>
+  <p id="streak" class="streak-box"></p>
   <script src="script.js"></script>
 </body>
 </html>
