--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>VibeGoblin</title>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet" />
 </head>
 <body>
   <h1>🧙‍♂️ VibeGoblin</h1>
@@ -13,6 +13,8 @@
   <button onclick="showVibe()">Summon Vibe</button>
   <p id="vibe-output" class="vibe-box"></p>
   <p id="streak" class="streak-box"></p>
+  <div id="badge-container" class="badge-gallery"></div>
+
   <script src="script.js"></script>
 </body>
 </html>
