--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   <p>Pick a track and sing your heart out</p>
 
   <select id="song-select">
-    <option value="track1">🎵 Chill Beat</option>
-    <option value="track2">🎶 Bouncy Bop</option>
+    <option value="bouncyChill">🎶 Bouncy Chill</option>
   </select>
 
   <audio id="karaoke-audio"></audio>
