--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>KaraokeCast</title>
+  <title>Vibe Goblin Karaoke</title>
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-  <h1>🎤 KaraokeCast</h1>
-  <p>Pick a track and sing your heart out</p>
+  <h1>🟢 Vibe Goblin Karaoke 🐸🎤</h1>
+  <p>Summon the goblin. Slay the mic.</p>
 
   <select id="song-select">
     <option value="bouncyChill">🎶 Bouncy Chill</option>
