--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
   <audio id="recording-playback" controls style="display: none;"></audio>
 
+  <div id="debug" style="margin-top: 30px; font-size: 0.7em; color: #aaa;"></div>
+
   <script src="script.js"></script>
 </body>
 </html>
