--- a/index.html
+++ b/index.html
@@ -24,7 +24,20 @@
 
   <audio id="recording-playback" controls style="display: none;"></audio>
 
-  <div id="debug" style="margin-top: 30px; font-size: 0.7em; color: #aaa;"></div>
+  <button id="clear-log-btn" style="margin-top: 20px;">🧹 Clear Log</button>
+
+  <div id="debug" style="
+    margin-top: 10px;
+    font-size: 0.75em;
+    color: #aaa;
+    background: #0c1f0c;
+    padding: 10px;
+    border-radius: 8px;
+    max-height: 150px;
+    overflow-y: auto;
+    text-align: left;
+    box-shadow: 0 0 10px #2dff2d;
+  "></div>
 
   <script src="script.js"></script>
 </body>
