--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Vibe Goblin Karaoke</title>
+  <link rel="stylesheet" href="style.css"/>
+</head>
+<body>
+  <h1>🎤 Vibe Goblin Karaoke 🐸</h1>
+  <p>Summon the goblin. Slay the mic.</p>
 
+  <select id="song-select">
+    <option value="bouncyChill">🎶 Bouncy Chill</option>
+  </select>
+
+  <audio id="karaoke-audio" controls style="margin: 10px;"></audio>
+
+  <button id="start-btn">▶️ Start Karaoke</button>
+  <button id="stop-btn" disabled>⏹️ Stop</button>
+
+  <div id="lyrics" class="lyrics-box">Lyrics will appear here...</div>
+
+  <button id="clear-log-btn" style="margin-top: 20px;">🧹 Clear Log</button>
+
+  <div id="debug" class="debug-box"></div>
+
+  <script src="script.js"></script>
+</body>
+</html>
