--- a/index.html
+++ b/index.html
@@ -1,114 +1,219 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Vibe Goblin Karaoke</title>
+  <title>Vibe Goblin Burger Flip 🍔</title>
   <style>
     body {
-      font-family: 'Comic Sans MS', cursive, sans-serif;
-      background: linear-gradient(135deg, #6b8e23, #556b2f);
-      color: #f0e68c;
-      margin: 0; padding: 0;
-      display: flex;
+      margin:0; padding:0;
+      background: linear-gradient(135deg, #ffcc66, #cc6600);
+      display:flex;
       flex-direction: column;
-      min-height: 100vh;
       align-items: center;
       justify-content: flex-start;
-    }
-    header {
-      padding: 1rem;
-      font-size: 2rem;
-      font-weight: bold;
-      text-shadow: 2px 2px 4px #222;
+      height: 100vh;
+      font-family: 'Comic Sans MS', cursive, sans-serif;
       user-select: none;
     }
-    main {
-      flex: 1;
-      max-width: 480px;
-      width: 90vw;
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      padding-bottom: 1rem;
+    h1 {
+      margin: 1rem 0 0.5rem 0;
+      color: #330000;
+      text-shadow: 2px 2px 4px #ffa500;
     }
-    select, button {
-      font-size: 1.2rem;
-      padding: 0.5rem;
-      border-radius: 8px;
-      border: none;
-      outline: none;
-      cursor: pointer;
-      box-shadow: 0 0 6px #333 inset;
-      background-color: #9acd32;
-      color: #222;
-      font-weight: bold;
-      user-select: none;
-      transition: background-color 0.3s ease;
-    }
-    select:hover, button:hover {
-      background-color: #7caf22;
-    }
-    #lyrics {
-      min-height: 6rem;
-      font-size: 1.6rem;
-      line-height: 1.4;
-      padding: 1rem;
-      background: rgba(0,0,0,0.3);
+    #game-area {
+      position: relative;
+      width: 320px;
+      height: 480px;
+      background: linear-gradient(to bottom, #aa7744 0%, #664422 100%);
       border-radius: 12px;
-      box-shadow: 0 0 12px 2px #8fbc8f;
-      text-align: center;
+      box-shadow: 0 0 20px #553300 inset;
+      overflow: hidden;
+    }
+    #grill {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 100px;
+      background: repeating-linear-gradient(
+        45deg,
+        #663300,
+        #663300 5px,
+        #a0522d 5px,
+        #a0522d 10px
+      );
+      box-shadow: inset 0 5px 20px rgba(0,0,0,0.5);
+      border-top-left-radius: 12px;
+      border-top-right-radius: 12px;
+    }
+    .burger {
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 100px;
+      height: 80px;
+      background: #d2691e;
+      border-radius: 50% / 40%;
+      cursor: pointer;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
       user-select: none;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 2rem;
+      color: white;
+      font-weight: bold;
+      text-shadow: 1px 1px 2px #330000;
+      transition: transform 0.3s ease;
     }
-    #debug {
-      background: rgba(0,0,0,0.2);
-      font-size: 0.8rem;
-      max-height: 160px;
-      overflow-y: auto;
-      padding: 0.5rem;
-      border-radius: 8px;
-      font-family: monospace;
-      color: #ccc;
-      user-select: text;
+    .burger.flipped {
+      background: #8b4513;
+      color: #f9d976;
+      transform: translateX(-50%) rotateY(180deg);
+      transition: transform 0.3s ease;
     }
-    footer {
-      margin: 0.5rem;
-      font-size: 0.9rem;
-      color: #eee;
-      text-align: center;
+    #scoreboard {
+      margin: 1rem 0;
+      font-size: 1.5rem;
+      font-weight: bold;
+      color: #330000;
       user-select: none;
+      text-shadow: 1px 1px 3px #ffa500;
     }
-    .goblin-style {
-      font-family: 'Papyrus', fantasy;
-      color: #556b2f;
-      text-shadow: 1px 1px 0 #9acd32, 2px 2px 2px #333;
+    #message {
+      font-size: 1.2rem;
+      font-weight: bold;
+      color: #440000;
+      margin: 0.5rem 0 1rem 0;
+      min-height: 24px;
+      user-select: none;
+      text-shadow: 1px 1px 2px #ffa500;
+    }
+    #start-btn {
+      padding: 0.8rem 1.6rem;
+      font-size: 1.2rem;
+      border-radius: 12px;
+      border: none;
+      background: #cc6600;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+      user-select: none;
+      box-shadow: 0 0 10px #ff9933 inset;
+      transition: background-color 0.3s ease;
+      margin-bottom: 1rem;
+    }
+    #start-btn:hover {
+      background: #e67e22;
     }
   </style>
 </head>
 <body>
-  <header class="goblin-style">Vibe Goblin Karaoke 🎤🧙‍♂️</header>
+  <h1>Vibe Goblin Burger Flip 🍔</h1>
+  <div id="scoreboard">Score: 0</div>
+  <div id="message"></div>
+  <button id="start-btn">Start Game</button>
+  <div id="game-area">
+    <div id="grill"></div>
+  </div>
 
-  <main>
-    <label for="song-select">Choose your track:</label>
-    <select id="song-select">
-      <option value="twinkle">Twinkle Twinkle Little Star</option>
-      <!-- Add more tracks here later -->
-    </select>
+  <script>
+    const gameArea = document.getElementById('game-area');
+    const scoreBoard = document.getElementById('scoreboard');
+    const message = document.getElementById('message');
+    const startBtn = document.getElementById('start-btn');
 
-    <button id="start-btn" disabled>Start Karaoke</button>
-    <button id="stop-btn" disabled>Stop Karaoke</button>
+    let score = 0;
+    let burger = null;
+    let burgerFalling = false;
+    let burgerY = 0;
+    let flipping = false;
+    let fallSpeed = 2; // pixels per frame
 
-    <div id="lyrics">Select a song and press Start Karaoke!</div>
+    function createBurger() {
+      burger = document.createElement('div');
+      burger.classList.add('burger');
+      burger.textContent = '🍔';
+      burger.style.top = '0px';
+      burger.style.left = '50%';
+      burger.style.transform = 'translateX(-50%) rotateY(0deg)';
+      burger.classList.remove('flipped');
+      gameArea.appendChild(burger);
 
-    <audio id="karaoke-audio" crossorigin="anonymous"></audio>
+      burgerY = 0;
+      burgerFalling = true;
+      flipping = false;
 
-    <button id="clear-log-btn" style="margin-top: 1rem;">🧹 Clear Log</button>
+      burger.onclick = () => {
+        if (!burgerFalling || flipping) return;
+        flipBurger();
+      };
+    }
 
-    <div id="debug"></div>
-  </main>
+    function flipBurger() {
+      flipping = true;
+      burger.classList.add('flipped');
+      // Perfect flip if burger is between 180 and 220 px
+      if (burgerY >= 180 && burgerY <= 220) {
+        score += 10;
+        message.textContent = 'Perfect Flip! +10 points 🍔🔥';
+      } else {
+        score -= 5;
+        message.textContent = 'Missed Flip! -5 points 😢';
+      }
+      updateScore();
+      setTimeout(() => {
+        burger.classList.remove('flipped');
+        flipping = false;
+      }, 500);
+    }
 
-  <footer>Made with goblin magic 🧙‍♂️✨</footer>
+    function updateScore() {
+      scoreBoard.textContent = `Score: ${score}`;
+    }
 
-  <script src="script.js"></script>
+    function gameOver() {
+      burgerFalling = false;
+      message.textContent = 'Game Over! Refresh to play again.';
+      if (burger) {
+        burger.remove();
+        burger = null;
+      }
+      startBtn.disabled = false;
+    }
+
+    function gameLoop() {
+      if (!burgerFalling) return;
+
+      burgerY += fallSpeed;
+      if (burger) burger.style.top = burgerY + 'px';
+
+      if (burgerY > 280) {
+        // Burger fell past grill without flip
+        score -= 10;
+        updateScore();
+        message.textContent = 'Burger burned! -10 points 😵‍💫';
+        if (burger) {
+          burger.remove();
+          burger = null;
+        }
+        burgerFalling = false;
+        startBtn.disabled = false;
+        return;
+      }
+
+      requestAnimationFrame(gameLoop);
+    }
+
+    startBtn.onclick = () => {
+      score = 0;
+      updateScore();
+      message.textContent = '';
+      startBtn.disabled = true;
+      if (burger) burger.remove();
+      createBurger();
+      gameLoop();
+    };
+  </script>
 </body>
 </html>
