--- a/index.html
+++ b/index.html
@@ -1,1 +1,179 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Vibe Goblin Karaoke - Timed Flip Challenge</title>
+<style>
+  body {
+    background: #222922;
+    color: #c9f243;
+    font-family: 'Comic Sans MS', cursive, sans-serif;
+    text-align: center;
+    margin: 0;
+    padding: 20px;
+  }
+  h1 {
+    margin-bottom: 10px;
+  }
+  #gameArea {
+    position: relative;
+    width: 280px;
+    height: 350px;
+    margin: 20px auto;
+    background: #3b4a1a;
+    border-radius: 12px;
+    box-shadow: 0 0 12px #a6d633 inset;
+    user-select: none;
+  }
+  #burger {
+    width: 150px;
+    margin: 40px auto 0;
+    transition: transform 0.7s ease-in-out;
+  }
+  #timerBar {
+    position: relative;
+    width: 220px;
+    height: 20px;
+    background: #444;
+    border-radius: 10px;
+    margin: 30px auto;
+    overflow: hidden;
+  }
+  #timerFill {
+    position: absolute;
+    height: 100%;
+    background: linear-gradient(to right, #f44336 0%, #f44336 30%, #c9f243 30%, #c9f243 70%, #f44336 70%, #f44336 100%);
+    width: 0;
+    transition: width 0.1s linear;
+  }
+  #flipBtn {
+    background: #9bdc28;
+    border: none;
+    border-radius: 8px;
+    padding: 12px 28px;
+    font-size: 22px;
+    font-weight: bold;
+    cursor: pointer;
+    box-shadow: 0 0 12px #c9f243;
+    user-select: none;
+  }
+  #flipBtn:active {
+    background: #a3e940;
+    box-shadow: 0 0 20px #f0ff73;
+  }
+  #score {
+    margin-top: 20px;
+    font-size: 24px;
+    letter-spacing: 1.2px;
+  }
+  #feedback {
+    height: 28px;
+    margin-top: 12px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #f0ff73;
+    min-height: 28px;
+  }
+</style>
+</head>
+<body>
+  <h1>Vibe Goblin Karaoke</h1>
+  <div id="gameArea">
+    <img id="burger" src="https://i.imgur.com/IJ1RXbY.png" alt="Burger" />
+    <div id="timerBar">
+      <div id="timerFill"></div>
+    </div>
+    <button id="flipBtn">Flip Burger!</button>
+    <div id="feedback"></div>
+    <div id="score">Score: 0</div>
+  </div>
 
+<script>
+  const timerFill = document.getElementById('timerFill');
+  const flipBtn = document.getElementById('flipBtn');
+  const burger = document.getElementById('burger');
+  const feedback = document.getElementById('feedback');
+  const scoreDisplay = document.getElementById('score');
+
+  let score = 0;
+  let timerPercent = 0;
+  let timerDirection = 1; // 1 = increasing, -1 = decreasing
+  let timerSpeed = 1.5; // % per frame (~60fps)
+  let timerRunning = true;
+  let flipping = false;
+
+  // Green zone from 30% to 70%
+  const perfectMin = 30;
+  const perfectMax = 70;
+
+  function updateTimer() {
+    if (!timerRunning) return;
+
+    timerPercent += timerDirection * timerSpeed;
+    if (timerPercent >= 100) {
+      timerPercent = 100;
+      timerDirection = -1;
+    } else if (timerPercent <= 0) {
+      timerPercent = 0;
+      timerDirection = 1;
+    }
+    timerFill.style.width = timerPercent + '%';
+  }
+
+  function flipBurger() {
+    if (flipping) return;
+    flipping = true;
+    timerRunning = false;
+
+    // Calculate score based on timing
+    let points = 0;
+    if (timerPercent >= perfectMin && timerPercent <= perfectMax) {
+      // Perfect zone, max points
+      // Score scales linearly within green zone
+      let mid = (perfectMin + perfectMax) / 2;
+      let dist = Math.abs(timerPercent - mid);
+      points = Math.round(100 - dist * 3); // max 100 points
+      feedback.textContent = 'Perfect Flip! +' + points;
+    } else {
+      // Outside perfect zone, fewer points
+      let dist = Math.min(Math.abs(timerPercent - perfectMin), Math.abs(timerPercent - perfectMax));
+      points = Math.max(10, 50 - dist * 2);
+      feedback.textContent = 'Nice try! +' + points;
+    }
+
+    score += points;
+    scoreDisplay.textContent = 'Score: ' + score;
+
+    // Animate burger flip (rotate 360deg)
+    burger.style.transition = 'transform 0.7s ease-in-out';
+    burger.style.transform = 'translateX(-50%) rotateX(360deg)';
+
+    setTimeout(() => {
+      // Reset rotation and timer for next round
+      burger.style.transition = 'none';
+      burger.style.transform = 'translateX(-50%) rotateX(0deg)';
+      feedback.textContent = '';
+      timerPercent = 0;
+      timerDirection = 1;
+      timerRunning = true;
+      flipping = false;
+    }, 700);
+  }
+
+  flipBtn.addEventListener('click', flipBurger);
+
+  function gameLoop() {
+    updateTimer();
+    requestAnimationFrame(gameLoop);
+  }
+
+  // Initialize burger position styling for transform origin
+  burger.style.position = 'relative';
+  burger.style.left = '50%';
+  burger.style.transformOrigin = 'center bottom';
+
+  gameLoop();
+</script>
+</body>
+</html>
