--- a/index.html
+++ b/index.html
@@ -3,118 +3,157 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Vibe Goblin: Burger Flip</title>
+  <title>Vibe Goblin: Flip Frenzy</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
-      background: #111;
-      color: #fff;
       font-family: 'Comic Sans MS', cursive, sans-serif;
+      background: linear-gradient(to bottom, #222, #111);
+      color: white;
       text-align: center;
       overflow: hidden;
+    }
+
+    h1 {
+      margin: 20px 0 10px;
     }
 
     #gameArea {
       position: relative;
       width: 100%;
-      height: 100vh;
-      background: radial-gradient(#222, #000);
-    }
-
-    .hand {
-      position: absolute;
-      bottom: 20px;
-      width: 80px;
-      height: 80px;
-      background: #0f0;
-      border-radius: 10px;
-      opacity: 0.8;
-    }
-
-    .left-hand {
-      left: 20px;
-    }
-
-    .right-hand {
-      right: 20px;
+      height: 60vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     #burger {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      width: 60px;
-      height: 60px;
-      background: #f90;
-      border-radius: 30px;
-      transform: translate(-50%, -50%);
-    }
-
-    #startButton {
-      margin-top: 20px;
-      padding: 10px 20px;
-      font-size: 1.2em;
-      background: #6f2;
-      border: none;
-      border-radius: 10px;
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      background: linear-gradient(#f90, #c60);
+      box-shadow: 0 4px 10px #000;
+      transition: transform 0.2s;
       cursor: pointer;
     }
 
-    #timer {
-      font-size: 2em;
-      margin-top: 10px;
+    #burger.flipped {
+      animation: pop 0.2s;
     }
+
+    @keyframes pop {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.3) rotate(10deg); }
+      100% { transform: scale(1) rotate(0); }
+    }
+
+    #startButton {
+      margin: 15px auto;
+      padding: 12px 24px;
+      font-size: 1.2em;
+      background: #0f0;
+      color: black;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+
+    #score, #timer {
+      font-size: 1.3em;
+      margin: 5px;
+    }
+
+    /* Time Bar Container */
+    #timeBarContainer {
+      width: 90%;
+      height: 12px;
+      background: #444;
+      margin: 10px auto;
+      border-radius: 6px;
+      overflow: hidden;
+    }
+
+    /* Time Bar */
+    #timeBar {
+      height: 100%;
+      width: 100%;
+      background: limegreen;
+      transition: width 1s linear;
+    }
+
   </style>
 </head>
 <body>
-  <h1>🍔 Vibe Goblin: Burger Flip</h1>
+  <h1>🍔 Vibe Goblin: Flip Frenzy</h1>
+
+  <div id="timeBarContainer">
+    <div id="timeBar"></div>
+  </div>
+
   <div id="gameArea">
     <div id="burger"></div>
-    <div class="hand left-hand"></div>
-    <div class="hand right-hand"></div>
   </div>
-  <button id="startButton">Start Flip Challenge</button>
-  <div id="timer">⏱️ 10s</div>
+
+  <div id="score">Score: 0</div>
+  <div id="timer">Time: 10s</div>
+  <button id="startButton">Start Game</button>
 
   <script>
     const burger = document.getElementById('burger');
-    const startBtn = document.getElementById('startButton');
-    const timerEl = document.getElementById('timer');
-    let timeLeft = 10;
+    const startButton = document.getElementById('startButton');
+    const timerDisplay = document.getElementById('timer');
+    const scoreDisplay = document.getElementById('score');
+    const timeBar = document.getElementById('timeBar');
+
+    let time = 10;
     let score = 0;
-    let timerInterval;
-    let isFlipping = false;
+    let interval;
+
+    function updateUI() {
+      timerDisplay.textContent = `Time: ${time}s`;
+      scoreDisplay.textContent = `Score: ${score}`;
+
+      // Update progress bar width and color
+      const percentage = (time / 10) * 100;
+      timeBar.style.width = `${percentage}%`;
+      timeBar.style.background = percentage < 30 ? 'red' : (percentage < 60 ? 'orange' : 'limegreen');
+    }
 
     function startGame() {
       score = 0;
-      timeLeft = 10;
-      timerEl.textContent = `⏱️ ${timeLeft}s`;
-      burger.style.top = '50%';
-      burger.style.left = '50%';
+      time = 10;
+      updateUI();
+      burger.style.pointerEvents = 'auto';
+      startButton.disabled = true;
 
-      clearInterval(timerInterval);
-      timerInterval = setInterval(() => {
-        timeLeft--;
-        timerEl.textContent = `⏱️ ${timeLeft}s`;
-        if (timeLeft <= 0) {
-          clearInterval(timerInterval);
-          alert(`Time's up! Your flips: ${score}`);
+      clearInterval(interval);
+      interval = setInterval(() => {
+        time--;
+        updateUI();
+
+        if (time <= 0) {
+          clearInterval(interval);
+          burger.style.pointerEvents = 'none';
+          startButton.disabled = false;
+          alert(`⏰ Time's up! Final score: ${score}`);
         }
       }, 1000);
     }
 
     burger.addEventListener('click', () => {
-      if (timeLeft > 0) {
-        // Flip burger to a random position
-        const top = Math.random() * 80 + 10;
-        const left = Math.random() * 80 + 10;
-        burger.style.top = `${top}%`;
-        burger.style.left = `${left}%`;
+      if (time > 0) {
         score++;
+        updateUI();
+        burger.classList.add('flipped');
+        setTimeout(() => burger.classList.remove('flipped'), 200);
       }
     });
 
-    startBtn.addEventListener('click', startGame);
+    startButton.addEventListener('click', startGame);
   </script>
 </body>
 </html>
