--- a/index.html
+++ b/index.html
@@ -1,1 +1,183 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>🍔 Vibe Goblin Flip</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Comic Sans MS', cursive;
+      background: linear-gradient(to top right, #c0f7e8, #fceabb);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      overflow: hidden;
+    }
 
+    h1 {
+      margin: 20px;
+      font-size: 2em;
+      color: #2d2d2d;
+      text-shadow: 1px 1px #fff;
+    }
+
+    .game-container {
+      position: relative;
+      width: 90%;
+      max-width: 400px;
+      height: 520px;
+      background: #fffdf5;
+      border: 5px dashed #5f4b32;
+      border-radius: 20px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+      overflow: hidden;
+    }
+
+    .burger {
+      position: absolute;
+      bottom: 80px;
+      left: 50%;
+      transform: translateX(-50%);
+      font-size: 60px;
+      transition: transform 0.2s ease;
+    }
+
+    .flip-zone {
+      position: absolute;
+      bottom: 180px;
+      width: 80px;
+      height: 30px;
+      border: 3px dashed #ff6f61;
+      border-radius: 10px;
+      animation: moveZone 3s infinite alternate ease-in-out;
+    }
+
+    @keyframes moveZone {
+      0% { left: 20px; }
+      100% { left: calc(100% - 100px); }
+    }
+
+    .timer-bar-bg {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      width: calc(100% - 20px);
+      height: 10px;
+      background: #ddd;
+      border-radius: 5px;
+    }
+
+    .timer-bar {
+      height: 100%;
+      background: #f44336;
+      width: 100%;
+      border-radius: 5px;
+      transition: width 0.1s;
+    }
+
+    .flip-button {
+      position: absolute;
+      bottom: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: #009688;
+      color: white;
+      padding: 15px 30px;
+      font-size: 1.2em;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    }
+
+    .flip-button:active {
+      transform: translateX(-50%) scale(0.97);
+    }
+
+    .result {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 1.6em;
+      color: #4e342e;
+      background: #ffffffcc;
+      padding: 10px 20px;
+      border-radius: 10px;
+      display: none;
+    }
+  </style>
+</head>
+<body>
+  <h1>🍔 Vibe Goblin Flip</h1>
+  <div class="game-container">
+    <div class="timer-bar-bg"><div class="timer-bar" id="timerBar"></div></div>
+    <div class="flip-zone" id="flipZone"></div>
+    <div class="burger" id="burger">🍔</div>
+    <button class="flip-button" onclick="flipBurger()">FLIP!</button>
+    <div class="result" id="resultText"></div>
+  </div>
+
+  <script>
+    let timerBar = document.getElementById("timerBar");
+    let resultText = document.getElementById("resultText");
+    let burger = document.getElementById("burger");
+    let flipZone = document.getElementById("flipZone");
+
+    let totalTime = 4000;
+    let remainingTime = totalTime;
+    let interval;
+    let inZone = false;
+
+    function startGame() {
+      resultText.style.display = "none";
+      burger.style.transform = "translateX(-50%) scale(1)";
+
+      // reset timer
+      remainingTime = totalTime;
+      timerBar.style.width = "100%";
+
+      // shrink timer
+      interval = setInterval(() => {
+        remainingTime -= 100;
+        timerBar.style.width = `${(remainingTime / totalTime) * 100}%`;
+
+        if (remainingTime <= 0) {
+          clearInterval(interval);
+          evaluateFlip(false);
+        }
+      }, 100);
+    }
+
+    function flipBurger() {
+      clearInterval(interval);
+      burger.style.transform = "translateX(-50%) scale(1.2) rotate(360deg)";
+
+      // Check burger center with flip zone position
+      const burgerRect = burger.getBoundingClientRect();
+      const zoneRect = flipZone.getBoundingClientRect();
+
+      const burgerCenter = burgerRect.left + burgerRect.width / 2;
+      const zoneStart = zoneRect.left;
+      const zoneEnd = zoneRect.right;
+
+      if (burgerCenter >= zoneStart && burgerCenter <= zoneEnd) {
+        evaluateFlip(true);
+      } else {
+        evaluateFlip(false);
+      }
+    }
+
+    function evaluateFlip(success) {
+      resultText.style.display = "block";
+      resultText.innerText = success ? "🔥 Perfect Flip!" : "❌ Missed it!";
+      setTimeout(startGame, 2000);
+    }
+
+    startGame();
+  </script>
+</body>
+</html>
